--- a/references.bib
+++ b/references.bib
@@ -46,6 +46,40 @@
   file = {/Users/rushilma/Zotero/storage/KBJXB23U/Addario-Berry et al. - 2017 - Local optima of the Sherrington-Kirkpatrick Hamiltonian.pdf;/Users/rushilma/Zotero/storage/8Q4H528T/1712.html}
 }
 
+@online{alaouiHardnessSamplingSolutions2024,
+  title = {Hardness of Sampling Solutions from the {{Symmetric Binary Perceptron}}},
+  author = {Alaoui, Ahmed El and Gamarnik, David},
+  date = {2024-07-23},
+  eprint = {2407.16627},
+  eprinttype = {arXiv},
+  eprintclass = {math},
+  doi = {10.48550/arXiv.2407.16627},
+  url = {http://arxiv.org/abs/2407.16627},
+  urldate = {2025-04-03},
+  abstract = {We show that two related classes of algorithms, stable algorithms and Boolean circuits with bounded depth, cannot produce an approximate sample from the uniform measure over the set of solutions to the symmetric binary perceptron model at any constraint-to-variable density. This result is in contrast to the question of finding a solution to the same problem, where efficient (and stable) algorithms are known to succeed at sufficiently low density. This result suggests that the solutions found efficiently—whenever this task is possible—must be highly atypical, and therefore provides an example of a problem where search is efficiently possible but approximate sampling from the set of solutions is not, at least within these two classes of algorithms.},
+  langid = {english},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Data Structures and Algorithms,Mathematics - Probability},
+  file = {/Users/rushilma/Zotero/storage/EIFLH3KC/Alaoui and Gamarnik - 2024 - Hardness of sampling solutions from the Symmetric Binary Perceptron.pdf}
+}
+
+@online{alaouiNearoptimalShatteringIsing2025,
+  title = {Near-Optimal Shattering in the {{Ising}} Pure p-Spin and Rarity of Solutions Returned by Stable Algorithms},
+  author = {Alaoui, Ahmed El},
+  date = {2025-01-13},
+  eprint = {2412.03511},
+  eprinttype = {arXiv},
+  eprintclass = {math},
+  doi = {10.48550/arXiv.2412.03511},
+  url = {http://arxiv.org/abs/2412.03511},
+  urldate = {2025-04-03},
+  abstract = {We show that in the Ising pure \$p\$-spin model of spin glasses, shattering takes place at all inverse temperatures \$\textbackslash beta \textbackslash in (\textbackslash sqrt\{(2 \textbackslash log p)/p\}, \textbackslash sqrt\{2\textbackslash log 2\})\$ when \$p\$ is sufficiently large as a function of \$\textbackslash beta\$. Of special interest is the lower boundary of this interval which matches the large \$p\$ asymptotics of the inverse temperature marking the hypothetical dynamical transition predicted in statistical physics. We show this as a consequence of a `soft' version of the overlap gap property which asserts the existence of a distance gap of points of typical energy from a typical sample from the Gibbs measure. We further show that this latter property implies that stable algorithms seeking to return a point of at least typical energy are confined to an exponentially rare subset of that super-level set, provided that their success probability is not vanishingly small.},
+  langid = {english},
+  pubstate = {prepublished},
+  keywords = {Condensed Matter - Disordered Systems and Neural Networks,Mathematical Physics,Mathematics - Mathematical Physics,Mathematics - Probability},
+  file = {/Users/rushilma/Zotero/storage/LPQ7FBCH/Alaoui - 2025 - Near-optimal shattering in the Ising pure p-spin and rarity of solutions returned by stable algorith.pdf}
+}
+
 @online{alaouiSamplingSherringtonKirkpatrickGibbs2024a,
   title = {Sampling from the {{Sherrington-Kirkpatrick Gibbs}} Measure via Algorithmic Stochastic Localization},
   author = {Alaoui, Ahmed El and Montanari, Andrea and Sellke, Mark},
@@ -151,6 +185,23 @@
   abstract = {We study the problem of determining the capacity of the binary perceptron for two variants of the problem where the corresponding constraint is symmetric. We call these variants the rectangle-binary-perceptron (RPB) and the \$u-\$function-binary-perceptron (UBP). We show that, unlike for the usual step-function-binary-perceptron, the critical capacity in these symmetric cases is given by the annealed computation in a large region of parameter space (for all rectangular constraints and for narrow enough \$u-\$function constraints, \$K{$<$}K\textasciicircum *\$). We prove this fact (under two natural assumptions) using the first and second moment methods. We further use the second moment method to conjecture that solutions of the symmetric binary perceptrons are organized in a so-called frozen-1RSB structure, without using the replica method. We then use the replica method to estimate the capacity threshold for the UBP case when the \$u-\$function is wide \$K{$>$}K\textasciicircum *\$. We conclude that full-step-replica-symmetry breaking would have to be evaluated in order to obtain the exact capacity in this case.},
   keywords = {Condensed Matter - Disordered Systems and Neural Networks,Mathematical Physics,Mathematics - Mathematical Physics,Mathematics - Probability},
   file = {/Users/rushilma/Zotero/storage/T6IESM3A/Aubin et al. - 2019 - Storage capacity in symmetric binary perceptrons.pdf;/Users/rushilma/Zotero/storage/VRGHGP9K/1901.html}
+}
+
+@online{bandeiraFranzParisiCriterionComputational2022,
+  title = {The {{Franz-Parisi Criterion}} and {{Computational Trade-offs}} in {{High Dimensional Statistics}}},
+  author = {Bandeira, Afonso S. and Alaoui, Ahmed El and Hopkins, Samuel B. and Schramm, Tselil and Wein, Alexander S. and Zadik, Ilias},
+  date = {2022-10-13},
+  eprint = {2205.09727},
+  eprinttype = {arXiv},
+  eprintclass = {math},
+  doi = {10.48550/arXiv.2205.09727},
+  url = {http://arxiv.org/abs/2205.09727},
+  urldate = {2025-04-03},
+  abstract = {Many high-dimensional statistical inference problems are believed to possess inherent computational hardness. Various frameworks have been proposed to give rigorous evidence for such hardness, including lower bounds against restricted models of computation (such as low-degree functions), as well as methods rooted in statistical physics that are based on free energy landscapes. This paper aims to make a rigorous connection between the seemingly different low-degree and free-energy based approaches. We define a free-energy based criterion for hardness and formally connect it to the well-established notion of low-degree hardness for a broad class of statistical problems, namely all Gaussian additive models and certain models with a sparse planted signal. By leveraging these rigorous connections we are able to: establish that for Gaussian additive models the “algebraic” notion of low-degree hardness implies failure of “geometric” local MCMC algorithms, and provide new low-degree lower bounds for sparse linear regression which seem difficult to prove directly. These results provide both conceptual insights into the connections between different notions of hardness, as well as concrete technical tools such as new methods for proving low-degree lower bounds.},
+  langid = {english},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Computational Complexity,Computer Science - Data Structures and Algorithms,Condensed Matter - Statistical Mechanics,Mathematics - Statistics Theory,Statistics - Machine Learning,Statistics - Statistics Theory},
+  file = {/Users/rushilma/Zotero/storage/4H65Y6RH/Bandeira et al. - 2022 - The Franz-Parisi Criterion and Computational Trade-offs in High Dimensional Statistics.pdf}
 }
 
 @online{bandeiraNotesComputationaltostatisticalGaps2018,
@@ -287,6 +338,23 @@
   pubstate = {prepublished},
   keywords = {Computer Science - Computational Complexity,Computer Science - Data Structures and Algorithms},
   file = {/Users/rushilma/Zotero/storage/AAP3ZJQ9/Bismuth et al. - 2024 - Partitioning Problems with Splittings and Interval Targets.pdf;/Users/rushilma/Zotero/storage/EZ7IYJ4Q/2204.html}
+}
+
+@online{blasiokSemirandomPlantedClique2024,
+  title = {Semirandom {{Planted Clique}} and the {{Restricted Isometry Property}}},
+  author = {Błasiok, Jarosław and Buhai, Rares-Darius and Kothari, Pravesh K. and Steurer, David},
+  date = {2024-10-09},
+  eprint = {2404.14159},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2404.14159},
+  url = {http://arxiv.org/abs/2404.14159},
+  urldate = {2025-04-03},
+  abstract = {We give a simple, greedy \$O(n\textasciicircum\{\textbackslash omega+0.5\})=O(n\textasciicircum\{2.872\})\$-time algorithm to list-decode planted cliques in a semirandom model introduced in [CSV17] (following [FK01]) that succeeds whenever the size of the planted clique is \$k\textbackslash geq O(\textbackslash sqrt\{n\} \textbackslash log\textasciicircum 2 n)\$. In the model, the edges touching the vertices in the planted \$k\$-clique are drawn independently with probability \$p=1/2\$ while the edges not touching the planted clique are chosen by an adversary in response to the random choices. Our result shows that the computational threshold in the semirandom setting is within a \$O(\textbackslash log\textasciicircum 2 n)\$ factor of the information-theoretic one [Ste17] thus resolving an open question of Steinhardt. This threshold also essentially matches the conjectured computational threshold for the well-studied special case of fully random planted clique. All previous algorithms [CSV17, MMT20, BKS23] in this model are based on rather sophisticated rounding algorithms for entropy-constrained semidefinite programming relaxations and their sum-of-squares strengthenings and the best known guarantee is a \$n\textasciicircum\{O(1/\textbackslash epsilon)\}\$-time algorithm to list-decode planted cliques of size \$k \textbackslash geq \textbackslash tilde\{O\}(n\textasciicircum\{1/2+\textbackslash epsilon\})\$. In particular, the guarantee trivializes to quasi-polynomial time if the planted clique is of size \$O(\textbackslash sqrt\{n\} \textbackslash operatorname\{polylog\} n)\$. Our algorithm achieves an almost optimal guarantee with a surprisingly simple greedy algorithm. The prior state-of-the-art algorithmic result above is based on a reduction to certifying bounds on the size of unbalanced bicliques in random graphs -- closely related to certifying the restricted isometry property (RIP) of certain random matrices and known to be hard in the low-degree polynomial model. Our key idea is a new approach that relies on the truth of -- but not efficient certificates for -- RIP of a new class of matrices built from the input graphs.},
+  langid = {english},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Data Structures and Algorithms},
+  file = {/Users/rushilma/Zotero/storage/HYH3QXTT/Błasiok et al. - 2024 - Semirandom Planted Clique and the Restricted Isometry Property.pdf}
 }
 
 @article{boettcherAnalysisKarmarkarKarpDifferencing2008,
@@ -744,21 +812,6 @@
   file = {/Users/rushilma/Zotero/storage/GS5PD8DW/Gamarnik and Sudan - 2014 - Limits of local algorithms over sparse random graphs.pdf}
 }
 
-@inproceedings{gamarnikLowDegreeHardnessRandom2020,
-  title = {Low-{{Degree Hardness}} of {{Random Optimization Problems}}},
-  booktitle = {2020 {{IEEE}} 61st {{Annual Symposium}} on {{Foundations}} of {{Computer Science}} ({{FOCS}})},
-  author = {Gamarnik, David and Jagannath, Aukosh and Wein, Alexander S.},
-  date = {2020-11},
-  pages = {131--140},
-  issn = {2575-8454},
-  doi = {10.1109/FOCS46700.2020.00021},
-  url = {https://ieeexplore.ieee.org/abstract/document/9317948},
-  urldate = {2025-03-29},
-  abstract = {We consider the problem of finding nearly optimal solutions of optimization problems with random objective functions. Such problems arise widely in the theory of random graphs, theoretical computer science, and statistical physics. Two concrete problems we consider are (a) optimizing the Hamiltonian of a spherical or Ising p-spin glass model, and (b) finding a large independent set in a sparse Erdos-Renyi graph. Two families of algorithms are considered: (a) low-degree polynomials of the input-a general framework that captures methods such as approximate message passing and local algorithms on sparse graphs, among others; and (b) the Langevin dynamics algorithm, a canonical Monte Carlo analogue of the gradient descent algorithm (applicable only for the spherical p-spin glass Hamiltonian). We show that neither family of algorithms can produce nearly optimal solutions with high probability. Our proof uses the fact that both models are known to exhibit a variant of the overlap gap property (OGP) of near-optimal solutions. Specifically, for both models, every two solutions whose objective values are above a certain threshold are either close or far from each other. The crux of our proof is the stability of both algorithms: a small perturbation of the input induces a small perturbation of the output. By an interpolation argument, such a stable algorithm cannot overcome the OGP barrier. The stability of the Langevin dynamics is an immediate consequence of the well-posedness of stochastic differential equations. The stability of low-degree polynomials is established using concepts from Gaussian and Boolean Fourier analysis, including noise sensitivity, hypercontractivity, and total influence.},
-  eventtitle = {2020 {{IEEE}} 61st {{Annual Symposium}} on {{Foundations}} of {{Computer Science}} ({{FOCS}})},
-  keywords = {Approximation algorithms,Glass,Heuristic algorithms,independent set,Langevin dynamics,low-degree polynomials,optimization,Optimization,overlap gap property,p-spin glass,Stability analysis,Tensors,Testing}
-}
-
 @online{gamarnikOverlapGapProperty2019,
   title = {The {{Overlap Gap Property}} and {{Approximate Message Passing Algorithms}} for \$p\$-Spin Models},
   author = {Gamarnik, David and Jagannath, Aukosh},
@@ -904,6 +957,41 @@
   url = {https://epubs.siam.org/doi/abs/10.1137/0117039},
   urldate = {2025-03-29},
   abstract = {One well-studied model of a multiprocessing system involves a fixed number n of identical abstract processors, a finite set of tasks to be executed, each requiring a specified amount of computation time, and a partial ordering on the tasks which requires certain tasks to be completed before certain others can be initiated. The nonpreemptive operation of the system is guided by an ordered list L of the tasks, according to the rule that whenever a processor becomes idle, it selects for processing the  first unexecuted task on L which may validly be executed. We introduce an additional element of realism into this model by postulating the existence of a set of “resources” with the property that for each resource, the total usage of that resource at any instant of time may not exceed its total availability. For this augmented model, we determine upper bounds on the ratio of finishing times achieved using two different lists, L and \$L'\$, and exhibit constructions to show that the bounds are best possible.}
+}
+
+@inproceedings{grossmanTightSpaceLower2023,
+  title = {Tight {{Space Lower Bound}} for {{Pseudo-Deterministic Approximate Counting}}},
+  booktitle = {2023 {{IEEE}} 64th {{Annual Symposium}} on {{Foundations}} of {{Computer Science}} ({{FOCS}})},
+  author = {Grossman, Ofer and Gupta, Meghal and Sellke, Mark},
+  date = {2023-11-06},
+  eprint = {2304.01438},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  pages = {1496--1504},
+  doi = {10.1109/FOCS57990.2023.00091},
+  url = {http://arxiv.org/abs/2304.01438},
+  urldate = {2025-04-03},
+  abstract = {We investigate one of the most basic problems in streaming algorithms: approximating the number of elements in the stream. Famously, [Mor78] gave a randomized algorithm achieving a constant-factor approximation error for streams of length at most N in space O(log log N ). We investigate the pseudo-deterministic complexity of the problem and prove a tight Ω(log N ) lower bound, thus resolving a problem of [GGMW20].},
+  langid = {english},
+  keywords = {Computer Science - Computational Complexity,Computer Science - Data Structures and Algorithms},
+  file = {/Users/rushilma/Zotero/storage/LPTXQ3SP/Grossman et al. - 2023 - Tight Space Lower Bound for Pseudo-Deterministic Approximate Counting.pdf}
+}
+
+@online{guruswamiCertifyingEuclideanSections2024,
+  title = {Certifying {{Euclidean Sections}} and {{Finding Planted Sparse Vectors Beyond}} the \$\textbackslash sqrt\{n\}\$ {{Dimension Threshold}}},
+  author = {Guruswami, Venkatesan and Hsieh, Jun-Ting and Raghavendra, Prasad},
+  date = {2024-05-08},
+  eprint = {2405.05373},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2405.05373},
+  url = {http://arxiv.org/abs/2405.05373},
+  urldate = {2025-04-03},
+  abstract = {We consider the task of certifying that a random \$d\$-dimensional subspace \$X\$ in \$\textbackslash mathbb\{R\}\textasciicircum n\$ is well-spread - every vector \$x \textbackslash in X\$ satisfies \$c\textbackslash sqrt\{n\} \textbackslash |x\textbackslash |\_2 \textbackslash leq \textbackslash |x\textbackslash |\_1 \textbackslash leq \textbackslash sqrt\{n\}\textbackslash |x\textbackslash |\_2\$. In a seminal work, Barak et. al. showed a polynomial-time certification algorithm when \$d \textbackslash leq O(\textbackslash sqrt\{n\})\$. On the other hand, when \$d \textbackslash gg \textbackslash sqrt\{n\}\$, the certification task is information-theoretically possible but there is evidence that it is computationally hard [MW21,Cd22], a phenomenon known as the information-computation gap. In this paper, we give subexponential-time certification algorithms in the \$d \textbackslash gg \textbackslash sqrt\{n\}\$ regime. Our algorithm runs in time \$\textbackslash exp(\textbackslash widetilde\{O\}(n\textasciicircum\{\textbackslash varepsilon\}))\$ when \$d \textbackslash leq \textbackslash widetilde\{O\}(n\textasciicircum\{(1+\textbackslash varepsilon)/2\})\$, establishing a smooth trade-off between runtime and the dimension. Our techniques naturally extend to the related planted problem, where the task is to recover a sparse vector planted in a random subspace. Our algorithm achieves the same runtime and dimension trade-off for this task.},
+  langid = {english},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Computational Complexity,Computer Science - Data Structures and Algorithms,Mathematics - Metric Geometry},
+  file = {/Users/rushilma/Zotero/storage/L7AHFHMD/Guruswami et al. - 2024 - Certifying Euclidean Sections and Finding Planted Sparse Vectors Beyond the $sqrt n $ Dimension Thr.pdf}
 }
 
 @online{harshawBalancingCovariatesRandomized2023,
@@ -1052,6 +1140,23 @@
   pubstate = {prepublished},
   keywords = {Computer Science - Computational Complexity,Condensed Matter - Disordered Systems and Neural Networks,Mathematical Physics,Mathematics - Mathematical Physics,Mathematics - Probability},
   file = {/Users/rushilma/Zotero/storage/Y2BFEEYK/Huang and Sellke - 2025 - Strong Low Degree Hardness for Stable Local Optima in Spin Glasses.pdf;/Users/rushilma/Zotero/storage/6T67KDNH/2501.html}
+}
+
+@online{huangTightLipschitzHardness2022,
+  title = {Tight {{Lipschitz Hardness}} for {{Optimizing Mean Field Spin Glasses}}},
+  author = {Huang, Brice and Sellke, Mark},
+  date = {2022-09-11},
+  eprint = {2110.07847},
+  eprinttype = {arXiv},
+  eprintclass = {math},
+  doi = {10.48550/arXiv.2110.07847},
+  url = {http://arxiv.org/abs/2110.07847},
+  urldate = {2025-04-03},
+  abstract = {We study the problem of algorithmically optimizing the Hamiltonian HN of a spherical or Ising mixed p-spin glass. The maximum asymptotic value OPT of HN /N is characterized by a variational principle known as the Parisi formula, proved first by Talagrand and in more generality by Panchenko. Recently developed approximate message passing algorithms efficiently optimize HN /N up to a value ALG given by an extended Parisi formula, which minimizes over a larger space of functional order parameters. These two objectives are equal for spin glasses exhibiting a no overlap gap property. However, ALG {$<$} OPT can also occur, and no efficient algorithm producing an objective value exceeding ALG is known.},
+  langid = {english},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Computational Complexity,Condensed Matter - Disordered Systems and Neural Networks,Mathematical Physics,Mathematics - Mathematical Physics,Mathematics - Optimization and Control,Mathematics - Probability},
+  file = {/Users/rushilma/Zotero/storage/GG5U7GKP/Huang and Sellke - 2022 - Tight Lipschitz Hardness for Optimizing Mean Field Spin Glasses.pdf}
 }
 
 @article{jerrumLargeCliquesElude1992,
@@ -1357,6 +1462,23 @@
   pubstate = {prepublished},
   keywords = {Computer Science - Computational Complexity,Computer Science - Data Structures and Algorithms,Mathematics - Statistics Theory,Statistics - Machine Learning,Statistics - Statistics Theory},
   file = {/Users/rushilma/Zotero/storage/ZJU4AEQW/Kunisky et al. - 2019 - Notes on Computational Hardness of Hypothesis Testing Predictions using the Low-Degree Likelihood R.pdf}
+}
+
+@online{kuniskyTensorCumulantsStatistical2024,
+  title = {Tensor Cumulants for Statistical Inference on Invariant Distributions},
+  author = {Kunisky, Dmitriy and Moore, Cristopher and Wein, Alexander S.},
+  date = {2024-04-29},
+  eprint = {2404.18735},
+  eprinttype = {arXiv},
+  eprintclass = {math},
+  doi = {10.48550/arXiv.2404.18735},
+  url = {http://arxiv.org/abs/2404.18735},
+  urldate = {2025-04-03},
+  abstract = {Many problems in high-dimensional statistics appear to have a statistical-computational gap: a range of values of the signal-to-noise ratio where inference is information-theoretically possible, but (conjecturally) computationally intractable. A canonical such problem is Tensor PCA, where we observe a tensor Y consisting of a rank-one signal plus Gaussian noise. Multiple lines of work suggest that Tensor PCA becomes computationally hard at a critical value of the signal’s magnitude. In particular, below this transition, no low-degree polynomial algorithm can detect the signal with high probability; conversely, various spectral algorithms are known to succeed above this transition. We unify and extend this work by considering tensor networks, orthogonally invariant polynomials where multiple copies of Y are “contracted” to produce scalars, vectors, matrices, or other tensors. We define a new set of objects, tensor cumulants, which provide an explicit, near-orthogonal basis for invariant polynomials of a given degree. This basis lets us unify and strengthen previous results on low-degree hardness, giving a combinatorial explanation of the hardness transition and of a continuum of subexponential-time algorithms that work below it, and proving tight lower bounds against low-degree polynomials for recovering rather than just detecting the signal. It also lets us analyze a new problem of distinguishing between different tensor ensembles, such as Wigner and Wishart tensors, establishing a sharp computational threshold and giving evidence of a new statistical-computational gap in the Central Limit Theorem for random tensors. Finally, we believe these cumulants are valuable mathematical objects in their own right: they generalize the free cumulants of free probability theory from matrices to tensors, and share many of their properties, including additivity under additive free convolution.},
+  langid = {english},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Computational Complexity,Computer Science - Data Structures and Algorithms,Mathematics - Probability,Mathematics - Statistics Theory,Statistics - Machine Learning,Statistics - Statistics Theory},
+  file = {/Users/rushilma/Zotero/storage/EJ6FDKJI/Kunisky et al. - 2024 - Tensor cumulants for statistical inference on invariant distributions.pdf}
 }
 
 @article{lauerLargeIndependentSets2007,
